fix(style): product display css error
Properly displays products on all pages.
Removes unwanted spaces between product images and displays them four per row on all category pages.

[finishes #117801355]

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -249,3 +249,9 @@ hr {
   color: $my-white;
   font-size: 1.4em !important;
 }
+
+.card .card-image img {
+  display: inline-block;
+}
+
+
